aligned switch correctly

--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 
 
 .btn {
-  @apply font-bold py-2 px-4 rounded m-4;
+  @apply font-bold py-2 px-4 rounded my-4;
 }
 .btn-blue {
   @apply bg-blue-500 text-white;
